[gd_scene load_steps=32 format=2]

[ext_resource path="res://asset/texture/player/sprites/playerFront.png" type="Texture" id=1]
[ext_resource path="res://asset/texture/player/sprites/playerSideWalk.png" type="Texture" id=2]
[ext_resource path="res://asset/texture/player/sprites/playerBack.png" type="Texture" id=3]
[ext_resource path="res://entity/player/MainCharacter.gd" type="Script" id=4]
[ext_resource path="res://asset/texture/player/sprites/playerFrontWalk1.png" type="Texture" id=5]
[ext_resource path="res://asset/texture/player/sprites/playerFrontWalk0.png" type="Texture" id=6]
[ext_resource path="res://asset/texture/player/sprites/playerBackWalk0.png" type="Texture" id=7]
[ext_resource path="res://asset/texture/player/sprites/playerBackWalk1.png" type="Texture" id=8]
[ext_resource path="res://asset/texture/player/sprites/playerSideWalk0.png" type="Texture" id=9]
[ext_resource path="res://asset/texture/player/sprites/playerSideWalk1.png" type="Texture" id=10]
[ext_resource path="res://asset/texture/player/animations/dash2.png" type="Texture" id=11]
[ext_resource path="res://asset/texture/player/animations/dash1.png" type="Texture" id=12]
[ext_resource path="res://asset/texture/player/animations/dash3.png" type="Texture" id=13]
[ext_resource path="res://asset/texture/player/animations/dash4.png" type="Texture" id=14]
[ext_resource path="res://asset/texture/player/animations/dash0.png" type="Texture" id=15]
[ext_resource path="res://asset/texture/player/animations/dash5.png" type="Texture" id=16]
[ext_resource path="res://asset/texture/interaction_icon/ask_symbol.png" type="Texture" id=17]
[ext_resource path="res://asset/texture/player/sprites/shadow.png" type="Texture" id=18]
[ext_resource path="res://UI/uis.tscn" type="PackedScene" id=19]
[ext_resource path="res://UI/scenes/InGame Menu.tscn" type="PackedScene" id=20]
[ext_resource path="res://world/sounds/default_grass_footstep.1.ogg" type="AudioStream" id=21]
[ext_resource path="res://world/sounds/default_grass_footstep.3.ogg" type="AudioStream" id=22]
[ext_resource path="res://world/sounds/default_grass_footstep.2.ogg" type="AudioStream" id=23]
[ext_resource path="res://entity/player/sounds/maincharacter_hurt_2.ogg" type="AudioStream" id=24]
[ext_resource path="res://entity/player/sounds/maincharacter_hurt_1.ogg" type="AudioStream" id=25]
[ext_resource path="res://entity/player/sounds/maincharacter_damage.ogg" type="AudioStream" id=26]
[ext_resource path="res://entity/player/sounds/dash.ogg" type="AudioStream" id=27]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 9.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "Go Down",
"speed": 6.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "Go Side",
"speed": 6.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "Go Up",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": false,
"name": "dash",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.9375, 31.6875 )

[node name="MainCharacter" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -7.5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Idle"

[node name="Sprite" type="Sprite" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( 0, 16 )
texture = ExtResource( 18 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -16 )
z_index = 5
current = true
smoothing_enabled = true

[node name="dashSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, -2 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "none"

[node name="AskSymbol" type="Sprite" parent="."]
visible = false
scale = Vector2( 3, 3 )
z_index = 4
texture = ExtResource( 17 )

[node name="UInode" type="CanvasLayer" parent="."]
process_priority = 49

[node name="playerUI" parent="UInode" instance=ExtResource( 19 )]
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 4 )

[node name="InGame Menu" parent="." instance=ExtResource( 20 )]
visible = false

[node name="Sounds" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Footstep1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 21 )

[node name="Footstep2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 23 )

[node name="Footstep3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 22 )

[node name="Hurt1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 25 )

[node name="Hurt2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 24 )

[node name="Damage" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 26 )

[node name="Dash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 27 )

[connection signal="area_entered" from="InteractArea" to="." method="_on_InteractArea_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_InteractArea_area_exited"]
